[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feature_extractor"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A package for extracting features (function call graphs & opcode) from executable files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "r2pipe",
    "pandas",
    "tqdm",
    "pyelftools",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/feature-extractor"
"Bug Tracker" = "https://github.com/yourusername/feature-extractor/issues"

[tool.hatch.build.targets.wheel]
packages = ["feature_extractor"]